# hass-miner

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: code-lint.yml  labeler.yml  release.yml
custom_components/miner/: __init__.py  button.py  config_flow.py  const.py  coordinator.py  device_action.py  light.py  manifest.json  number.py  patch.py  select.py  sensor.py  services.py  strings.json  switch.py
custom_components/miner/translations/: en.json
docs/bos-api/: README.md  actions.md  authentication.md  configuration.md  cooling.md  license.md  miner.md  network.md  performance.md  pools.md  upgrade.md
docs/bos-api/v1.2.0/: license.md  pools.md
docs/bos-api/v1.3.0/: openapi.json
docs/cgminer-api/: README.md  commands.md  led.md  stats.md  system.md  workmode.md
har_files/: README.md
scripts/: analyze_temps.py  analyze_vnish_har.py  test_bos_api.py  test_bos_hydro_api.py  test_bos_s21e.py  test_device_action_workmode.py  vnish_har_analysis.txt
