[tool.poetry]
name = "hass-miner"
version = "1.1.19"
description = ""
authors = ["Michael Schmid <michael@amazee.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.14.2,<3.15"
homeassistant = "^2026.4.0"
colorlog = "^6.9.0"
ruff = "^0.12.5"
betterproto = "2.0.0b7"
pyasic = "0.78.0"
setuptools = "^80.9.0"
pre-commit = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
